# Bias

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
bias/: __init__.py  api.py  py.typed
bias/cli/: __init__.py  main.py
bias/core/: __init__.py  client.py  config.py  engine.py  library.py
bias/utils/: __init__.py  helpers.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: bias.rst  client.rst  config.rst  engine.rst  library.rst
docs/background/: neuronpedia.rst  research.rst  sparse_autoencoders.rst  what_is_steering.rst
docs/development/: changelog.rst  contributing.rst
docs/getting_started/: concepts.rst  installation.rst  quickstart.rst
docs/user_guide/: advanced_usage.rst  basic_usage.rst  cli.rst  configuration.rst
examples/: __init__.py  demos.py
