[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias"
version = "0.1.0"
description = "LLM Steering with Interpretable SAE Features - Steer language models using Neuronpedia's Sparse Autoencoder features"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "codewithdark-git", email = "codewithdark90@gmail.com"}
]
maintainers = [
    {name = "codewithdark-git", email = "codewithdark90@gmail.com"}
]
keywords = [
    "llm",
    "steering",
    "interpretability",
    "sparse-autoencoder",
    "sae",
    "neuronpedia",
    "transformers",
    "nlp",
    "machine-learning",
    "deep-learning",
    "language-models",
    "gpt",
    "bias",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.5.0",
    "transformers>=4.30.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-parser>=2.0.0",
]
all = [
    "bias[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/codewithdark-git/bias"
Documentation = "https://bias.readthedocs.io"
Repository = "https://github.com/codewithdark-git/bias"
Issues = "https://github.com/codewithdark-git/bias/issues"
Changelog = "https://github.com/codewithdark-git/bias/blob/main/CHANGELOG.md"

[project.scripts]
bias = "bias.cli.main:main"

[project.entry-points."console_scripts"]
bias-cli = "bias.cli.main:main"

[tool.setuptools]
packages = ["bias", "bias.core", "bias.cli", "bias.utils", "bias.examples"]

[tool.setuptools.package-data]
bias = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=bias --cov-report=term-missing"
